--- a/css/style.css
+++ b/css/style.css
@@ -10,15 +10,61 @@ header {
     align-items: center;
 }
 
-a {
-    text-decoration: none;
+.secondary-text {
     color: #E5E7EB;
     font-size: 18px;
+}
+
+a {
+    text-decoration: none;
     padding: 0px 4px;
+    color: #E5E7EB;
 }
 
 .logo {
     font-size: 24px;
     color: #F9FAF8;
     font-weight: bold;
+}
+
+.top-content {
+    display: flex;
+    justify-content: center;
+    padding-top: 48px;
+}
+
+.image {
+    background-color: #E5E7EB;
+    width: 500px;
+    height: 250px;
+    flex-shrink: 0;
+}
+
+.main-text {
+    flex-shrink: 2;
+    width: 500px;
+    height: 250px;
+}
+
+.title {
+    color: #f9faf8;
+    font-size: 48px;
+    font-weight: 900;
+    margin-bottom: -20px;
+}
+
+.btn {
+    background-color: #3882f6;
+    border-radius: 5px;
+    border-color: #3882f6;
+    color: #E5E7EB;
+    font-weight: bold;
+    text-align: center;
+    width: 100px;
+    height: 30px;
+}
+
+h1 {
+    padding: 0;
+    margin: 0;
 }
