--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,51 @@ h1 {
     padding: 0;
     margin: 0;
 }
+
+.infoheader {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.info {
+    background-color: #F9FAF8;
+    margin: 0;
+    padding: 24px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.imgcontent {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.illustration {
+    width: 100px;
+    height: 100px;
+    border: #3882f6 solid;
+    border-radius: 10px;
+}
+
+.imgcontent div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 150px;
+
+}
+
+.imgcontent p {
+    flex-wrap: wrap;
+    color: #1F2937;
+}
