--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ a {
 .top-content {
     display: flex;
     justify-content: center;
-    padding-top: 48px;
+    padding: 52px 0;
 }
 
 .image {
@@ -78,7 +78,7 @@ h1 {
 .info {
     background-color: #F9FAF8;
     margin: 0;
-    padding: 24px;
+    padding: 52px 0;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -88,7 +88,6 @@ h1 {
 body {
     display: flex;
     flex-direction: column;
-    gap: 50px;
 }
 
 .imgcontent {
@@ -115,4 +114,28 @@ body {
 .imgcontent p {
     flex-wrap: wrap;
     color: #1F2937;
+}
+
+.quote {
+    background-color: #E5E7EB;
+    padding: 52px 0;
+    display: flex;
+    justify-content: center;
+}
+
+.quote-text {
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    font-weight: lighter;
+}
+
+.quote div {
+    width: 800px;
+    display: flex;
+    flex-direction: column;
+}
+
+.quote-author {
+    align-self: flex-end;
 }
