--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 header {
-    
+
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -134,8 +134,50 @@ body {
     width: 800px;
     display: flex;
     flex-direction: column;
+    padding: 15px;
 }
 
 .quote-author {
     align-self: flex-end;
+}
+
+.signup {
+    background-color: #F9FAF8;
+    padding: 52px 150px;
+    
+}
+
+.box {
+    display: flex;
+    background-color: #3882f6;
+    border-radius: 5px;
+    padding: 26px 48px;
+    justify-content: center;
+    align-self: center;
+    gap: 16px;
+}
+
+.box-main {
+    font-weight: 900;
+    color: #F9FAF8;
+    padding: 0;
+    margin: 0;
+}
+
+.box-second {
+    color: #F9FAF8;
+    padding: 0;
+    margin: 0;
+}
+
+.box-btn {
+    color: #F9FAF8;
+    background-color: #3882f6;
+    border: #F9FAF8 solid;
+    border-radius: 10px;
+    width: 100px;
+    height: 30px;
+    text-align: center;
+    align-self: center;
+    
 }
